--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,7 @@ i {
     h1 {
         font-size: 1.75em;
         margin-top: -7vw;
+        letter-spacing: -0.15vw;
     }
     h3 {
         font-size: 0.5em;
