--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html {
     src: url(../fonts/Lato-Bold.woff2);
 }
 h1 {
-    font-family: 'SFUI';
+    font-family: 'SFUI Bold';
     font-size: 5em;
     line-height: 1.25em;
     margin: 0;
@@ -512,6 +512,7 @@ i {
     h1 {
         font-size: 1.75em;
         margin-top: -7vw;
+        letter-spacing: -0.25vw;
     }
     h3 {
         font-size: 0.5em;
