--- a/css/style.css
+++ b/css/style.css
@@ -515,7 +515,7 @@ i {
         letter-spacing: -0.40vw;
     }
     h3 {
-        font-size: 1.em;
+        font-size: 0.85em;
         letter-spacing: -0.15vw;
     }
     h4 {
