Footer letter spacing
Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,7 @@ i {
     }
     h4 {
         font-size: 0.625em;
+        letter-spacing: -0.125vw;
     }
     .project {
         display: inline-block;
