--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h3 {
     font-weight: inherit;
 }
 h4 {
-    font-family: 'SFUI Light';
+    font-family: 'SFUI';
     font-size: 1.25em;
     font-weight: inherit;
     line-height: 1.5em;
