--- a/css/style.css
+++ b/css/style.css
@@ -536,24 +536,20 @@ footer p a:hover {
 }
 
 /* TRAVEL */
-.grid-travel {
-    display: grid;
-    grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-.city {
-    margin-bottom: 3em;
+.travel-title {
+    width: 90vw;
+    background: url(../work/travel/dallas1.jpg) center / cover no-repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
 .scroll {
     padding-top: 1.5em;
-    padding-left: 0.5em;
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
-    white-space: nowrap;
 }
 .photo {
-    display: inline;
-    margin-right: 1.5vw;
-    height: 40vw;
+    display: block;
+    position: relative;
+    margin-bottom: 1.5em;
+    width: 100%;
     border-radius: 0.625vw;
 
     transition: 0.28s;
@@ -562,97 +558,100 @@ footer p a:hover {
     transform: scale(1.01);
     transition: 0.28s;
 }
-.travel-athens {
+.city {
+    width: 90vw;
+}
+.city-athens {
     background: url(../work/travel/athens1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-austin {
+.city-austin {
     background: url(../work/travel/austin1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-cairo {
+.city-cairo {
     background: url(../work/travel/cairo1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-cambridge {
+.city-cambridge {
     background: url(../work/travel/cambridge1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-chicago {
+.city-chicago {
     background: url(../work/travel/chicago1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-dallas {
+.city-dallas {
     background: url(../work/travel/dallas1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0);
 }
-.travel-florence {
+.city-florence {
     background: url(../work/travel/florence1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-istanbul {
+.city-istanbul {
     background: url(../work/travel/istanbul1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-ithaca {
+.city-ithaca {
     background: url(../work/travel/ithaca1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-london {
+.city-london {
     background: url(../work/travel/london1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-madrid {
+.city-madrid {
     background: url(../work/travel/madrid1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-milan {
+.city-milan {
     background: url(../work/travel/milan1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-nyc {
+.city-nyc {
     background: url(../work/travel/nyc1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-orlando {
+.city-orlando {
     background: url(../work/travel/orlando1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
 
-.travel-sf {
+.city-sf {
     background: url(../work/travel/sf1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
 
-.travel-sendai {
+.city-sendai {
     background: url(../work/travel/sendai1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-sydney {
+.city-sydney {
     background: url(../work/travel/sydney1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
-.travel-venice {
+.city-venice {
     background: url(../work/travel/venice1.jpg) center / cover no-repeat;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.3);
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.25);
 }
 ::-webkit-scrollbar {
     display: none;
@@ -780,10 +779,21 @@ footer p a:hover {
         height: 35vw;
         width: 35vw;
     }
-    
     /* TRAVEL */
-    .grid-travel {
-        grid-template-columns: repeat(12, minmax(0, 1fr));
+    .scroll {
+        padding-top: 1.5em;
+        padding-left: 0.5em;
+        overflow-x: scroll;
+        white-space: nowrap;
+    }
+    .photo {
+        display: inline;
+        margin-right: 1.5vw;
+        height: 40vw;
+        width: auto;
+        border-radius: 0.625vw;
+
+        transition: 0.28s;
     }
 }
 
@@ -818,11 +828,6 @@ footer p a:hover {
         margin-bottom: auto;
         height: 25em;
         width: 25em;
-    }
-
-    /* TRAVEL */
-    .grid-travel {
-        grid-template-columns: repeat(12, minmax(0, 1fr));
     }
 }
 
